--- a/spec/importers/screening_list/part561/results.yaml
+++ b/spec/importers/screening_list/part561/results.yaml
@@ -57,14 +57,23 @@
     :type: SWIFT/BIC
   :name_idx: BANK OF KUNLUN
   :name_no_ws_with_common: BANKOFKUNLUNCOLTD
+  :name_no_ws_rev_with_common: LTDCOKUNLUNOFBANK
+  :name_rev: KUNLUN OF BANK
   :name_no_ws: BANKOFKUNLUN
   :name_no_ws_rev: KUNLUNOFBANK
   :alt_idx:
   - KARAMAY URBAN CREDIT COOPERATIVES
   - KARAMAY CITY COMMERCIAL BANK
   :alt_no_ws_with_common:
+  :alt_no_ws_with_common:
   - KARAMAYURBANCREDITCOOPERATIVES
   - KARAMAYCITYCOMMERCIALBANKCOLTD
+  :alt_no_ws_rev_with_common:
+  - COOPERATIVESCREDITURBANKARAMAY
+  - LTDCOBANKCOMMERCIALCITYKARAMAY
+  :alt_rev:
+  - COOPERATIVES CREDIT URBAN KARAMAY
+  - BANK COMMERCIAL CITY KARAMAY
   :alt_no_ws:
   - KARAMAYURBANCREDITCOOPERATIVES
   - KARAMAYCITYCOMMERCIALBANK
