--- a/spec/importers/screening_list/dpl/results.yaml
+++ b/spec/importers/screening_list/dpl/results.yaml
@@ -11,8 +11,11 @@
    :code: DPL
   :source_list_url: http://1.usa.gov/1iwvBr5
   :source_information_url: http://1.usa.gov/1Qi3F4l
+  :name_idx: SEMICONDUCTOR SYSTEMS INTL INC SSI
   :name_idx: SEMICONDUCTOR SYSTEMS INTL SSI
   :name_no_ws_with_common: SEMICONDUCTORSYSTEMSINTLINCSSI
+  :name_no_ws_rev_with_common: SSIINCINTLSYSTEMSSEMICONDUCTOR
+  :name_rev: SSI INTL SYSTEMS SEMICONDUCTOR
   :name_no_ws: SEMICONDUCTORSYSTEMSINTLSSI
   :name_no_ws_rev: SSIINTLSYSTEMSSEMICONDUCTOR
   :addresses:
@@ -32,6 +35,7 @@
   :source_list_url: http://1.usa.gov/1iwvBr5
   :source_information_url: http://1.usa.gov/1Qi3F4l
   :name_idx: KAL TEK LABS
+  :name_rev: LABS TEK KAL
   :name_no_ws: KALTEKLABS
   :name_no_ws_rev: LABSTEKKAL
   :addresses:
@@ -51,6 +55,7 @@
   :source_list_url: http://1.usa.gov/1iwvBr5
   :source_information_url: http://1.usa.gov/1Qi3F4l
   :name_idx: KATSUTA KEISUKE
+  :name_rev: KEISUKE KATSUTA
   :name_no_ws: KATSUTAKEISUKE
   :name_no_ws_rev: KEISUKEKATSUTA
   :addresses:
@@ -70,6 +75,7 @@
   :source_list_url: http://1.usa.gov/1iwvBr5
   :source_information_url: http://1.usa.gov/1Qi3F4l
   :name_idx: KINTRACO
+  :name_rev: KINTRACO
   :name_no_ws: KINTRACO
   :name_no_ws_rev: KINTRACO
   :addresses:
@@ -89,6 +95,7 @@
   :source_list_url: http://1.usa.gov/1iwvBr5
   :source_information_url: http://1.usa.gov/1Qi3F4l
   :name_idx: ABELAIRAS AMANCIO J
+  :name_rev: J AMANCIO ABELAIRAS
   :name_no_ws: ABELAIRASAMANCIOJ
   :name_no_ws_rev: JAMANCIOABELAIRAS
   :addresses:
@@ -108,6 +115,7 @@
   :source_list_url: http://1.usa.gov/1iwvBr5
   :source_information_url: http://1.usa.gov/1Qi3F4l
   :name_idx: ABRISHAMI ELHAM
+  :name_rev: ELHAM ABRISHAMI
   :name_no_ws: ABRISHAMIELHAM
   :name_no_ws_rev: ELHAMABRISHAMI
   :addresses:
@@ -127,6 +135,7 @@
   :source_list_url: http://1.usa.gov/1iwvBr5
   :source_information_url: http://1.usa.gov/1Qi3F4l
   :name_idx: ACE IAN
+  :name_rev: IAN ACE
   :name_no_ws: ACEIAN
   :name_no_ws_rev: IANACE
   :addresses:
@@ -146,6 +155,7 @@
   :source_list_url: http://1.usa.gov/1iwvBr5
   :source_information_url: http://1.usa.gov/1Qi3F4l
   :name_idx: ADT ANALOG DIGITAL TECHNIK
+  :name_rev: TECHNIK DIGITAL ANALOG ADT
   :name_no_ws: ADTANALOGDIGITALTECHNIK
   :name_no_ws_rev: TECHNIKDIGITALANALOGADT
   :addresses:
@@ -165,6 +175,7 @@
   :source_list_url: http://1.usa.gov/1iwvBr5
   :source_information_url: http://1.usa.gov/1Qi3F4l
   :name_idx: AGNESE ANDREE
+  :name_rev: ANDREE AGNESE
   :name_no_ws: AGNESEANDREE
   :name_no_ws_rev: ANDREEAGNESE
   :addresses:
