--- a/spec/importers/screening_list/isa/results.yaml
+++ b/spec/importers/screening_list/isa/results.yaml
@@ -36,6 +36,8 @@
   :ids: []
   :name_idx: KUO OIL S PTE
   :name_no_ws_with_common: KUOOILSPTELIMITED
+  :name_no_ws_rev_with_common: LIMITEDPTESOILKUO
+  :name_rev: PTE S OIL KUO
   :name_no_ws: KUOOILSPTE
   :name_no_ws_rev: PTESOILKUO
 - :entity_number: '13043'
@@ -78,5 +80,7 @@
   :ids: []
   :name_idx: FAL OIL
   :name_no_ws_with_common: FALOILCOMPANYLTD
+  :name_no_ws_rev_with_common: LTDCOMPANYOILFAL
+  :name_rev: OIL FAL
   :name_no_ws: FALOIL
   :name_no_ws_rev: OILFAL
