--- a/spec/importers/screening_list/plc/results.yaml
+++ b/spec/importers/screening_list/plc/results.yaml
@@ -30,9 +30,11 @@
   :addresses: []
   :ids: []
   :name_idx: HANIYA Ismail Abdul Salah
+  :name_rev: Salah Abdul Ismail HANIYA
   :name_no_ws: HANIYAIsmailAbdulSalah
   :name_no_ws_rev: SalahAbdulIsmailHANIYA
   :alt_idx: [HANIYA Ismail, HANIYYA Ismaeel]
+  :alt_rev: [Ismail HANIYA, Ismaeel HANIYYA]
   :alt_no_ws: [HANIYAIsmail, HANIYYAIsmaeel]
   :alt_no_ws_rev: [IsmailHANIYA, IsmaeelHANIYYA]
 - :entity_number: '9674'
@@ -64,10 +66,13 @@
   :addresses: []
   :ids: []
   :name_idx: QFEISHEH Hatem
+  :name_rev: Hatem QFEISHEH
   :name_no_ws: QFEISHEHHatem
   :name_no_ws_rev: HatemQFEISHEH
   :alt_idx:
    [KAFEESHEH Hatem Rabah, QEFEISHA Hatem, ABU ANED Hadj Hatem]
+  :alt_rev:
+   [Rabah Hatem KAFEESHEH, Hatem QEFEISHA, Hatem Hadj ANED ABU]
   :alt_no_ws:
    [KAFEESHEHHatemRabah, QEFEISHAHatem, ABUANEDHadjHatem]
   :alt_no_ws_rev:
@@ -104,9 +109,11 @@
     :address:
   :ids: []
   :name_idx: YAHIA Khaled Abed
+  :name_rev: Abed Khaled YAHIA
   :name_no_ws: YAHIAKhaledAbed
   :name_no_ws_rev: AbedKhaledYAHIA
   :alt_idx: [YEHIA Khaled Said]
+  :alt_rev: [Said Khaled YEHIA]
   :alt_no_ws: [YEHIAKhaledSaid]
   :alt_no_ws_rev: [SaidKhaledYEHIA]
 - :entity_number: '9705'
@@ -138,9 +145,11 @@
   :addresses: []
   :ids: []
   :name_idx: SALEH Jamal
+  :name_rev: Jamal SALEH
   :name_no_ws: SALEHJamal
   :name_no_ws_rev: JamalSALEH
   :alt_idx: [NASSER Jamal Talab Mohammad Saleh, SALEH Jamal Talab]
+  :alt_rev: [Saleh Mohammad Talab Jamal NASSER, Talab Jamal SALEH]
   :alt_no_ws: [NASSERJamalTalabMohammadSaleh, SALEHJamalTalab]
   :alt_no_ws_rev: [SalehMohammadTalabJamalNASSER, TalabJamalSALEH]
 - :entity_number: '9712'
@@ -170,9 +179,11 @@
   :addresses: []
   :ids: []
   :name_idx: SHIHAB Mohammed
+  :name_rev: Mohammed SHIHAB
   :name_no_ws: SHIHABMohammed
   :name_no_ws_rev: MohammedSHIHAB
   :alt_idx: [SHEHAB Mohamed Abed Hadi Rahman]
+  :alt_rev: [Rahman Hadi Abed Mohamed SHEHAB]
   :alt_no_ws: [SHEHABMohamedAbedHadiRahman]
   :alt_no_ws_rev: [RahmanHadiAbedMohamedSHEHAB]
 - :entity_number: '9715'
@@ -200,5 +211,6 @@
   :addresses: []
   :ids: []
   :name_idx: JARRAR Khaledah
+  :name_rev: Khaledah JARRAR
   :name_no_ws: JARRARKhaledah
   :name_no_ws_rev: KhaledahJARRAR
