--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 bundler_args: --without development staging production
 language: ruby
+rvm:
+  - 2.3.5
 sudo: true
 
 addons:
@@ -10,7 +12,7 @@ addons:
       - oracle-java8-set-default
 
 before_install:
-  - curl -O https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.2.1.deb && sudo dpkg -i --force-confnew elasticsearch-5.2.1.deb && env && sudo service elasticsearch start
+  - curl -O https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.6.3.deb && sudo dpkg -i --force-confnew elasticsearch-5.6.3.deb && env && sudo service elasticsearch start
 
 notifications:
   slack: govwizely:R9Nhshn0NO7eRh4ThXaMKqWw
